Fixed ugly rendering (mostly superfluous white spaces) in the rendering of some tests.

--- a/KnowWE/KnowWE-Plugin-CI4KE/src/main/resources/webapp/KnowWEExtension/css/CI4KE.css
+++ b/KnowWE/KnowWE-Plugin-CI4KE/src/main/resources/webapp/KnowWEExtension/css/CI4KE.css
@@ -41,6 +41,7 @@
 	{ 
 	float: left; 
 	width: 100%;
+	white-space: normal;
 	}
 /*
 .ci-column-right
@@ -76,6 +77,7 @@
 	{
 	/*border: thin solid #96BBD9;*/
 	padding: 3px 5px;
+	white-space: pre-wrap;
 	}
 .ci-collapsible-box h4 
 	{
@@ -83,6 +85,7 @@
 	cursor:pointer;
 	/*margin:3px 0;*/
 	padding: 5px 0px 5px 5px;
+	white-space: pre-wrap;
 	}
 
 .build-table a:hover
